--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,8 +38,9 @@
     <string name="GPS_ToggleButton">GPS ToggleButton</string>
     <string name="accuracy">accuracy</string>
     <string name="inclination">inclination</string>
-    <string name="callsign">Callsign</string>
+    <string name="callsign">callsign</string>
     <string name="timestamp">Timestamp</string>
+    <string name="comment">comment</string>
     <string name="save_button">Save</string>
 
     <string name="no_pelengs">No Pelengs</string>
